--- a/docs/feui/guide/component/search.html
+++ b/docs/feui/guide/component/search.html
@@ -754,7 +754,7 @@
       </div>
     
     <div class="footer">
-      文件翻译错误或者想参与贡献?
+      文档出现错误或者想参与贡献?
       <a href="https://gitee.com/feui/feui-hexo/blob/master/source/feui/guide/component/search.md" target="_blank">
         在Github编辑此页面!
       </a>
