--- a/docs/feui/guide/component/component.html
+++ b/docs/feui/guide/component/component.html
@@ -813,6 +813,30 @@
 <td style="text-align:center">-</td>
 </tr>
 <tr>
+<td style="text-align:center">462</td>
+<td style="text-align:center">Radio</td>
+<td style="text-align:center">单选按钮</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/radio.html">https://feui.gitee.io/docs/feui/guide/component/radio.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/radio">https://feui.gitee.io/#/radio</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">463</td>
+<td style="text-align:center">Switch</td>
+<td style="text-align:center">开关</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/switch.html">https://feui.gitee.io/docs/feui/guide/component/switch.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/switch">https://feui.gitee.io/#/switch</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">464</td>
+<td style="text-align:center">Textarea</td>
+<td style="text-align:center">文本域</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/textarea.html">https://feui.gitee.io/docs/feui/guide/component/textarea.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/textarea">https://feui.gitee.io/#/textarea</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
 <td style="text-align:center">-</td>
 <td style="text-align:center">-</td>
 <td style="text-align:center">-</td>
