--- a/docs/feui/guide/component/actionsheet.html
+++ b/docs/feui/guide/component/actionsheet.html
@@ -535,7 +535,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/textarea.html" class="sidebar-link new">Textarea 文本域</a>
+      <a href="/docs/feui/guide/component/textarea.html" class="sidebar-link">Textarea 文本域</a>
     </li>
   
     
@@ -552,6 +552,20 @@
     
     <li>
       <a href="/docs/feui/guide/component/actionsheet.html" class="sidebar-link current">Actionsheet 地址栏</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/datetime.html" class="sidebar-link new">Datetime 日期</a>
     </li>
   
     
@@ -723,6 +737,8 @@
     
       <div class="guide-links">
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/datetime.html">Datetime 日期</a> →</span>
         
       </div>
     
