--- a/docs/feui/guide/component/datetime.html
+++ b/docs/feui/guide/component/datetime.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Tabbar 底部标签 — Feui</title>
+    <title>Datetime 日期 — Feui</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <link rel="icon" href="/docs/images/favicon.ico" type="image/x-icon">
@@ -323,7 +323,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/tabber.html" class="sidebar-link current">Tabbar 底部标签</a>
+      <a href="/docs/feui/guide/component/tabber.html" class="sidebar-link">Tabbar 底部标签</a>
     </li>
   
     
@@ -565,7 +565,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/datetime.html" class="sidebar-link new">Datetime 日期</a>
+      <a href="/docs/feui/guide/component/datetime.html" class="sidebar-link current new">Datetime 日期</a>
     </li>
   
     
@@ -592,16 +592,18 @@
 
 
 
-<div  id='content' class="content guide with-sidebar tabber-guide">
+<div  id='content' class="content guide with-sidebar datetime-guide">
   <div class='content_box'>
     
-      <h1>Tabbar 底部标签</h1>
+      <h1>Datetime 日期</h1>
     
     <div id='pContent'>
-      <p><a href="https://feui.gitee.io/#/tabbar">Live Demo&gt;&gt;</a></p>
-<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Tabbar,TabbarItem &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line"></div><div class="line">components: &#123;</div><div class="line">  [Tabbar.name]: Tabbar</div><div class="line">  [TabbarItem.name]: TabbarItem</div><div class="line">&#125;</div></pre></td></tr></table></figure>
-<h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-tabbar</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">tabbar-item</span>&gt;</span></div><div class="line">    <span class="tag">&lt;<span class="name">img</span> <span class="attr">slot</span>=<span class="string">"icon"</span> <span class="attr">src</span>=<span class="string">"../assets/images/logo-100.png"</span> /&gt;</span></div><div class="line">    <span class="tag">&lt;<span class="name">span</span> <span class="attr">slot</span>=<span class="string">"label"</span>&gt;</span>主页<span class="tag">&lt;/<span class="name">span</span>&gt;</span></div><div class="line">  <span class="tag">&lt;/<span class="name">tabbar-item</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">tabbar-item</span> <span class="attr">show-dot</span>&gt;</span></div><div class="line">    <span class="tag">&lt;<span class="name">img</span> <span class="attr">slot</span>=<span class="string">"icon"</span> <span class="attr">src</span>=<span class="string">"../assets/images/logo-100.png"</span> /&gt;</span></div><div class="line">    <span class="tag">&lt;<span class="name">span</span> <span class="attr">slot</span>=<span class="string">"label"</span>&gt;</span>消息<span class="tag">&lt;/<span class="name">span</span>&gt;</span></div><div class="line">  <span class="tag">&lt;/<span class="name">tabbar-item</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">tabbar-item</span> <span class="attr">selected</span> <span class="attr">link</span>=<span class="string">"/tabbar"</span> <span class="attr">icon-class</span>=<span class="string">'selected'</span>&gt;</span></div><div class="line">    <span class="tag">&lt;<span class="name">img</span> <span class="attr">slot</span>=<span class="string">"icon"</span> <span class="attr">src</span>=<span class="string">"../assets/images/logo-100.png"</span> /&gt;</span></div><div class="line">    <span class="tag">&lt;<span class="name">span</span> <span class="attr">slot</span>=<span class="string">"label"</span>&gt;</span>通讯录<span class="tag">&lt;/<span class="name">span</span>&gt;</span></div><div class="line">  <span class="tag">&lt;/<span class="name">tabbar-item</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">tabbar-item</span> <span class="attr">badge</span>=<span class="string">"2"</span>&gt;</span></div><div class="line">    <span class="tag">&lt;<span class="name">img</span> <span class="attr">slot</span>=<span class="string">"icon"</span> <span class="attr">src</span>=<span class="string">"../assets/images/logo-100.png"</span> /&gt;</span></div><div class="line">    <span class="tag">&lt;<span class="name">span</span> <span class="attr">slot</span>=<span class="string">"label"</span>&gt;</span>我的<span class="tag">&lt;/<span class="name">span</span>&gt;</span></div><div class="line">  <span class="tag">&lt;/<span class="name">tabbar-item</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-tabbar</span>&gt;</span></div></pre></td></tr></table></figure>
-<p>#Tabbar</p>
+      <p><a href="https://feui.gitee.io/#/datetime">Live Demo&gt;&gt;</a></p>
+<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Datetime &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line">components: &#123;</div><div class="line">  [Datetime.name]: Datetime</div><div class="line">&#125;,</div><div class="line">methods: &#123;</div><div class="line">  change (value) &#123;</div><div class="line">    <span class="built_in">console</span>.log(<span class="string">'change'</span>, value)</div><div class="line">  &#125;,</div><div class="line">&#125;</div></pre></td></tr></table></figure>
+<h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><h4 id="基础用法"><a href="#基础用法" class="headerlink" title="基础用法"></a>基础用法</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span> <span class="attr">title</span>=<span class="string">"默认格式: YYYY-MM-DD"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-datetime</span> <span class="attr">v-model</span>=<span class="string">"value1"</span> @<span class="attr">on-change</span>=<span class="string">"change"</span> <span class="attr">title</span>=<span class="string">"生日"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-datetime</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
+<h4 id="定义小时分钟列表"><a href="#定义小时分钟列表" class="headerlink" title="定义小时分钟列表"></a>定义小时分钟列表</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span> <span class="attr">title</span>=<span class="string">"定义小时分钟列表"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-datetime</span> <span class="attr">v-model</span>=<span class="string">"hourListValue"</span> <span class="attr">format</span>=<span class="string">"YYYY-MM-DD HH:mm"</span> </span></div><div class="line"><span class="tag">    <span class="attr">:hour-list</span>=<span class="string">"['09', '10', '11', '12', '13', '14', '15', '16']"</span> </span></div><div class="line"><span class="tag">    <span class="attr">:minute-list</span>=<span class="string">"['00', '15', '30', '45']"</span> </span></div><div class="line"><span class="tag">    @<span class="attr">on-change</span>=<span class="string">"change"</span> <span class="attr">title</span>=<span class="string">"生日"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;/<span class="name">fe-datetime</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
+<h4 id="只读模式"><a href="#只读模式" class="headerlink" title="只读模式"></a>只读模式</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span> <span class="attr">title</span>=<span class="string">"Readonly"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-datetime</span> <span class="attr">v-model</span>=<span class="string">"valueReadonly"</span> <span class="attr">:readonly</span>=<span class="string">"readonly"</span> </span></div><div class="line"><span class="tag">  @<span class="attr">on-change</span>=<span class="string">"change"</span> <span class="attr">title</span>=<span class="string">"生日"</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-datetime</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
+<h4 id="设置开始时间和结束日"><a href="#设置开始时间和结束日" class="headerlink" title="设置开始时间和结束日"></a>设置开始时间和结束日</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span> <span class="attr">title</span>=<span class="string">"设置开始时间和结束日期 2015-11-11 ~ 2018-11-11"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-datetime</span> <span class="attr">v-model</span>=<span class="string">"limitHourValue"</span> <span class="attr">:start-date</span>=<span class="string">"startDate"</span> <span class="attr">:end-date</span>=<span class="string">"endDate"</span> </span></div><div class="line"><span class="tag">    <span class="attr">format</span>=<span class="string">"YYYY-MM-DD HH:mm"</span> @<span class="attr">on-change</span>=<span class="string">"change"</span> <span class="attr">title</span>=<span class="string">"开始时间"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;/<span class="name">fe-datetime</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
 <h3 id="API"><a href="#API" class="headerlink" title="API"></a>API</h3><table>
 <thead>
 <tr>
@@ -614,9 +616,205 @@
 </thead>
 <tbody>
 <tr>
-<td>icon-class</td>
-<td>图标的class名</td>
+<td>value</td>
+<td>表单值，<code>v-model</code>绑定</td>
 <td><code>String</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>title</td>
+<td>标题</td>
+<td><code>String</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>format</td>
+<td>时间格式</td>
+<td><code>String</code></td>
+<td>YYYY-MM-DD</td>
+<td>YYYY-MM-DD HH:mm:ss等</td>
+</tr>
+<tr>
+<td>inline-desc</td>
+<td>描述字符</td>
+<td><code>String</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>placeholder</td>
+<td>提示文字，当value为空时显示</td>
+<td><code>String</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>min-year</td>
+<td>可选择的最小年份</td>
+<td><code>Number</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>max-year</td>
+<td>可选择的最大年份</td>
+<td><code>Number</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>min-hour</td>
+<td>限定小时最小值</td>
+<td><code>Number</code></td>
+<td><code>0</code></td>
+<td>-</td>
+</tr>
+<tr>
+<td>max-hour</td>
+<td>限定小时最大值</td>
+<td><code>Number</code></td>
+<td><code>23</code></td>
+<td>-</td>
+</tr>
+<tr>
+<td>confirm-text</td>
+<td>确认按钮文字</td>
+<td><code>String</code></td>
+<td><code>ok(确认)</code></td>
+<td>-</td>
+</tr>
+<tr>
+<td>cancel-text</td>
+<td>取消按钮文字</td>
+<td><code>String</code></td>
+<td><code>cancel(取消)</code></td>
+<td>-</td>
+</tr>
+<tr>
+<td>clear-text</td>
+<td>显示在中间的自定义按钮的文字</td>
+<td><code>String</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>year-row</td>
+<td>年份的渲染模板</td>
+<td><code>String</code></td>
+<td>{value}</td>
+<td>-</td>
+</tr>
+<tr>
+<td>month-row</td>
+<td>月份的渲染模板</td>
+<td><code>String</code></td>
+<td>{value}</td>
+<td>-</td>
+</tr>
+<tr>
+<td>day-row</td>
+<td>日期的渲染模板</td>
+<td><code>String</code></td>
+<td>{value}</td>
+<td>-</td>
+</tr>
+<tr>
+<td>hour-row</td>
+<td>小时的渲染模板</td>
+<td><code>String</code></td>
+<td>{value}</td>
+<td>-</td>
+</tr>
+<tr>
+<td>minute-row</td>
+<td>分钟的渲染模板</td>
+<td><code>String</code></td>
+<td>{value}</td>
+<td>-</td>
+</tr>
+<tr>
+<td>start-date</td>
+<td>限定最小日期，格式必须为 YYYY-MM-DD</td>
+<td><code>String</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>end-date</td>
+<td>限定最大日期，格式必须为 YYYY-MM-DD</td>
+<td><code>String</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>required</td>
+<td>是否必填</td>
+<td><code>Boolean</code></td>
+<td><code>false</code></td>
+<td><code>false</code>,<code>true</code></td>
+</tr>
+<tr>
+<td>display-format</td>
+<td>自定义显示值</td>
+<td><code>Function</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>readonly</td>
+<td>只读模式，显示类似于 cell</td>
+<td><code>Boolean</code></td>
+<td><code>false</code></td>
+<td><code>false</code>,<code>true</code></td>
+</tr>
+<tr>
+<td>show</td>
+<td>控制显示，要求 vue^2.3</td>
+<td><code>Boolean</code></td>
+<td><code>false</code></td>
+<td><code>false</code>,<code>true</code></td>
+</tr>
+<tr>
+<td>hour-list</td>
+<td>定义小时列表</td>
+<td><code>Array</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>minute-list</td>
+<td>定义分钟列表</td>
+<td><code>Array</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>default-selected-value</td>
+<td>设置默认选中日期，当前 value 为空时有效</td>
+<td><code>String</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>compute-days-function</td>
+<td>动态设置日期列表，参数为 ({year, month, min, max}, generateRange)</td>
+<td><code>Function</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>compute-hours-function</td>
+<td>动态设置小时列表，参数为 (value, isToday, generateRange)</td>
+<td><code>Function</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
 <td>-</td>
 <td>-</td>
 </tr>
@@ -633,82 +831,17 @@
 <tbody>
 <tr>
 <td>default</td>
-<td>tabbar主体内容，只允许tabbar-item</td>
-<td>-</td>
-</tr>
-</tbody>
-</table>
-<p>#TabbarItem</p>
-<h3 id="API-1"><a href="#API-1" class="headerlink" title="API"></a>API</h3><table>
-<thead>
-<tr>
-<th>参数</th>
-<th>说明</th>
-<th>类型</th>
-<th>默认值</th>
-<th>可选值</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>selected</td>
-<td>是否选中当前项，也可以用v-model来指定选中的tabbar-item的index</td>
-<td><code>Boolean</code></td>
-<td><code>false</code></td>
-<td><code>false</code>,<code>true</code></td>
-</tr>
-<tr>
-<td>badge</td>
-<td>徽标文字，不指定则不显示</td>
-<td><code>String</code></td>
-<td>-</td>
+<td>触发元素内容</td>
 <td>-</td>
 </tr>
 <tr>
-<td>show-dot</td>
-<td>是否显示红点</td>
-<td><code>Boolean</code></td>
-<td><code>false</code></td>
-<td><code>false</code>,<code>true</code></td>
-</tr>
-<tr>
-<td>link</td>
-<td>图标的class名</td>
-<td><code>Boolean</code></td>
-<td><code>false</code></td>
-<td><code>false</code>,<code>true</code></td>
-</tr>
-<tr>
-<td>icon-class</td>
-<td>图标类名，如果tabbar也同时定义了icon-class, 会使用tabbar-item的</td>
-<td><code>String</code></td>
-<td>-</td>
-<td>-</td>
-</tr>
-</tbody>
-</table>
-<h3 id="Slots-1"><a href="#Slots-1" class="headerlink" title="Slots"></a>Slots</h3><table>
-<thead>
-<tr>
-<th>Slot名</th>
-<th>说明</th>
-<th>备注</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>icon</td>
-<td>图标区域</td>
+<td>title</td>
+<td>title slot</td>
 <td>-</td>
 </tr>
 <tr>
-<td>icon-active</td>
-<td>如果存在，当前 tabbar-item 点击时会显示，用于切换图标</td>
 <td>-</td>
-</tr>
-<tr>
-<td>label</td>
-<td>图标下方文字</td>
+<td>-</td>
 <td>-</td>
 </tr>
 </tbody>
@@ -724,9 +857,45 @@
 </thead>
 <tbody>
 <tr>
-<td>on-item-click</td>
-<td>index</td>
-<td>点击菜单项时触发</td>
+<td>on-change</td>
+<td><code>value</code></td>
+<td>表单值变表单值变化时触发, 参数<code>(newVal)</code></td>
+<td>-</td>
+</tr>
+<tr>
+<td>on-clear</td>
+<td>-</td>
+<td>点击显示在中间的自定义按钮时触发</td>
+<td>-</td>
+</tr>
+<tr>
+<td>on-show</td>
+<td>-</td>
+<td>弹窗显示时触发</td>
+<td>-</td>
+</tr>
+<tr>
+<td>on-hide</td>
+<td><code>type</code></td>
+<td>弹窗关闭时触发</td>
+<td><code>type</code> 是<code>[cancel, confirm]</code>其中之一</td>
+</tr>
+<tr>
+<td>on-confirm</td>
+<td>-</td>
+<td>点击确定按钮时触发，等同于事件<code>on-hide(confirm)</code></td>
+<td>-</td>
+</tr>
+<tr>
+<td>on-cancel</td>
+<td>-</td>
+<td>点击取消按钮或者遮罩时触发，等同于事件<code>on-hide(cancel)</code></td>
+<td>-</td>
+</tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
 <td>-</td>
 </tr>
 </tbody>
@@ -736,14 +905,14 @@
     
       <div class="guide-links">
         
-          <span>← <a href="/docs/feui/guide/component/tab.html">Tab 标签栏</a></span>
+          <span>← <a href="/docs/feui/guide/component/actionsheet.html">Actionsheet 地址栏</a></span>
         
         
       </div>
     
     <div class="footer">
       文档出现错误或者想参与贡献?
-      <a href="https://gitee.com/feui/feui-hexo/blob/master/source/feui/guide/component/tabber.md" target="_blank">
+      <a href="https://gitee.com/feui/feui-hexo/blob/master/source/feui/guide/component/datetime.md" target="_blank">
         在Github编辑此页面!
       </a>
     </div>
