--- a/docs/feui/guide/component/button.html
+++ b/docs/feui/guide/component/button.html
@@ -565,7 +565,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/datetime.html" class="sidebar-link new">Datetime 日期</a>
+      <a href="/docs/feui/guide/component/datetime.html" class="sidebar-link">Datetime 日期</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/dialog.html" class="sidebar-link new">Dialog 弹窗</a>
     </li>
   
     
@@ -688,6 +702,13 @@
 <td><code>submit</code></td>
 <td><code>submit</code>,<code>button</code>,<code>reset</code></td>
 </tr>
+<tr>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+<td>-</td>
+</tr>
 </tbody>
 </table>
 <h3 id="Slots"><a href="#Slots" class="headerlink" title="Slots"></a>Slots</h3><table>
@@ -702,6 +723,11 @@
 <tr>
 <td>default</td>
 <td>按钮文字</td>
+<td>-</td>
+</tr>
+<tr>
+<td>-</td>
+<td>-</td>
 <td>-</td>
 </tr>
 </tbody>
