--- a/docs/feui/guide/component/component.html
+++ b/docs/feui/guide/component/component.html
@@ -565,7 +565,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/datetime.html" class="sidebar-link new">Datetime 日期</a>
+      <a href="/docs/feui/guide/component/datetime.html" class="sidebar-link">Datetime 日期</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/dialog.html" class="sidebar-link new">Dialog 弹窗</a>
     </li>
   
     
@@ -880,6 +894,14 @@
 <td style="text-align:center">日期</td>
 <td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/datetime.html">https://feui.gitee.io/docs/feui/guide/component/datetime.html</a></td>
 <td style="text-align:left"><a href="https://feui.gitee.io/#/datetime">https://feui.gitee.io/#/datetime</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">501</td>
+<td style="text-align:center">Dialog</td>
+<td style="text-align:center">弹框</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/dialog.html">https://feui.gitee.io/docs/feui/guide/component/dialog.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/dialog">https://feui.gitee.io/#/dialog</a></td>
 <td style="text-align:center">-</td>
 </tr>
 <tr>
