--- a/docs/feui/guide/component/datetime.html
+++ b/docs/feui/guide/component/datetime.html
@@ -565,7 +565,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/datetime.html" class="sidebar-link current new">Datetime 日期</a>
+      <a href="/docs/feui/guide/component/datetime.html" class="sidebar-link current">Datetime 日期</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/dialog.html" class="sidebar-link new">Dialog 弹窗</a>
     </li>
   
     
@@ -907,6 +921,8 @@
         
           <span>← <a href="/docs/feui/guide/component/actionsheet.html">Actionsheet 地址栏</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/dialog.html">Dialog 弹窗</a> →</span>
         
       </div>
     
