:baby_bottle: add new docs loading

--- a/docs/feui/guide/component/button.html
+++ b/docs/feui/guide/component/button.html
@@ -579,7 +579,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/dialog.html" class="sidebar-link new">Dialog 弹窗</a>
+      <a href="/docs/feui/guide/component/dialog.html" class="sidebar-link">Dialog 弹窗</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/loading.html" class="sidebar-link new">Loading 加载中</a>
     </li>
   
     
@@ -614,7 +628,7 @@
     <div id='pContent'>
       <p><a href="https://feui.gitee.io/#/button">Live Demo&gt;&gt;</a></p>
 <blockquote>
-<p>按照Vue文档，在组件上绑定点击事件请使用<code>@click.native</code>。</p>
+<p>按照Vue文档，在组件上绑定点击事件请使用<a href="mailto:`@click.native" target="_blank" rel="noopener">`@click.native</a>`。</p>
 </blockquote>
 <h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Button &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line"></div><div class="line">components: &#123;</div><div class="line">  [Button.name]: Button</div><div class="line">&#125;</div></pre></td></tr></table></figure>
 <h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><h4 id="按钮类型"><a href="#按钮类型" class="headerlink" title="按钮类型"></a>按钮类型</h4><p>支持<code>default</code>、<code>primary</code>、<code>warn</code>三种类型，默认为<code>default</code></p>
