--- a/docs/feui/guide/component/cell.html
+++ b/docs/feui/guide/component/cell.html
@@ -579,7 +579,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/dialog.html" class="sidebar-link new">Dialog 弹窗</a>
+      <a href="/docs/feui/guide/component/dialog.html" class="sidebar-link">Dialog 弹窗</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/loading.html" class="sidebar-link new">Loading 加载中</a>
     </li>
   
     
@@ -716,7 +730,7 @@
 <td>align-items 样式值</td>
 <td><code>String</code></td>
 <td><code>center</code></td>
-<td>参见<code>align-items</code><a href="http://www.runoob.com/cssref/css3-pr-align-items.html" target="_blank" rel="external">可选值</a></td>
+<td>参见<code>align-items</code><a href="http://www.runoob.com/cssref/css3-pr-align-items.html" target="_blank" rel="noopener">可选值</a></td>
 </tr>
 <tr>
 <td>-</td>
