--- a/docs/feui/guide/component/flexbox.html
+++ b/docs/feui/guide/component/flexbox.html
@@ -579,7 +579,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/dialog.html" class="sidebar-link new">Dialog 弹窗</a>
+      <a href="/docs/feui/guide/component/dialog.html" class="sidebar-link">Dialog 弹窗</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/loading.html" class="sidebar-link new">Loading 加载中</a>
     </li>
   
     
@@ -614,7 +628,7 @@
     <div id='pContent'>
       <p><a href="https://feui.gitee.io/#/flexbox">Live Demo&gt;&gt;</a></p>
 <blockquote>
-<p>由于本组件大量用到<code>flex</code>知识,对此知识不明白的，推荐查看<a href="http://www.ruanyifeng.com/blog/2015/07/flex-grammar.html" target="_blank" rel="external">阮老师的教程</a></p>
+<p>由于本组件大量用到<code>flex</code>知识,对此知识不明白的，推荐查看<a href="http://www.ruanyifeng.com/blog/2015/07/flex-grammar.html" target="_blank" rel="noopener">阮老师的教程</a></p>
 </blockquote>
 <h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Flexbox,FlexboxItem &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line"></div><div class="line">components: &#123;</div><div class="line">  [Flexbox.name]: Flexbox,</div><div class="line">  [FlexboxItem.name]: FlexboxItem</div><div class="line">&#125;</div></pre></td></tr></table></figure>
 <figure class="highlight css"><table><tr><td class="code"><pre><div class="line"><span class="selector-class">.flex-demo</span>&#123;</div><div class="line">  <span class="attribute">text-align</span>: center;</div><div class="line">  <span class="attribute">color</span>: <span class="number">#fff</span>;</div><div class="line">  <span class="attribute">background-color</span>: <span class="number">#4a90e2</span>;</div><div class="line">  <span class="attribute">border-radius</span>: <span class="number">4px</span>;</div><div class="line">  <span class="attribute">background-clip</span>: padding-box;</div><div class="line">&#125;</div></pre></td></tr></table></figure>
