--- a/docs/feui/guide/component/lazyload.html
+++ b/docs/feui/guide/component/lazyload.html
@@ -579,7 +579,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/dialog.html" class="sidebar-link new">Dialog 弹窗</a>
+      <a href="/docs/feui/guide/component/dialog.html" class="sidebar-link">Dialog 弹窗</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/loading.html" class="sidebar-link new">Loading 加载中</a>
     </li>
   
     
@@ -622,7 +636,7 @@
 <h4 id="懒加载背景图"><a href="#懒加载背景图" class="headerlink" title="懒加载背景图"></a>懒加载背景图</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span> <span class="attr">title</span>=<span class="string">"iPhone 8"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">div</span> <span class="attr">v-for</span>=<span class="string">"img in backgroundImageList"</span> <span class="attr">class</span>=<span class="string">'lazyback'</span></span></div><div class="line"><span class="tag">  <span class="attr">v-lazy:background-image</span>=<span class="string">"img"</span> <span class="attr">:key</span>=<span class="string">'img'</span>&gt;</span><span class="tag">&lt;/<span class="name">div</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
 <h4 id="懒加载背景图-1"><a href="#懒加载背景图-1" class="headerlink" title="懒加载背景图"></a>懒加载背景图</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-group</span> <span class="attr">title</span>=<span class="string">"MacBook Pro"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">lazy-component</span>&gt;</span></div><div class="line">    <span class="tag">&lt;<span class="name">img</span> <span class="attr">v-for</span>=<span class="string">"img in componentImageList"</span> <span class="attr">v-lazy</span>=<span class="string">"img"</span> <span class="attr">:key</span>=<span class="string">'img'</span> /&gt;</span></div><div class="line">  <span class="tag">&lt;/<span class="name">lazy-component</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-group</span>&gt;</span></div></pre></td></tr></table></figure>
 <h3 id="API"><a href="#API" class="headerlink" title="API"></a>API</h3><blockquote>
-<p>该组件详细文档,请移步<a href="https://github.com/hilongjw/vue-lazyload#constructor-options" target="_blank" rel="external">vue-lazyload 文档</a></p>
+<p>该组件详细文档,请移步<a href="https://github.com/hilongjw/vue-lazyload#constructor-options" target="_blank" rel="noopener">vue-lazyload 文档</a></p>
 </blockquote>
 
     </div>
