--- a/docs/feui/guide/component/dialog.html
+++ b/docs/feui/guide/component/dialog.html
@@ -579,7 +579,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/dialog.html" class="sidebar-link current new">Dialog 弹窗</a>
+      <a href="/docs/feui/guide/component/dialog.html" class="sidebar-link current">Dialog 弹窗</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/loading.html" class="sidebar-link new">Loading 加载中</a>
     </li>
   
     
@@ -735,6 +749,8 @@
         
           <span>← <a href="/docs/feui/guide/component/datetime.html">Datetime 日期</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/loading.html">Loading 加载中</a> →</span>
         
       </div>
     
